--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ fetch('https://api.github.com/repos/fiatjaf/classless/contents/themes')
 
   </main>
   <aside>
-    <p>This is an `aside`, a useful place to put information of any kind: metadata about the site author (with or without pictures), brief information about the purposes of the site, a static collection of external links or anything else.</p>
-<p>For some Classless themes pictures and data about the author may suit better in the `cover` and `description` site attributes (see `config.toml`), but most of the times that kind of information will fit here better.</p>
+    <p>artist statement here.</p>
+<p>who am I</p>
 
   </aside>
   <footer role="contentinfo">
